# data-registry

./: .gitignore  .isort.cfg  CITATION.cff  README.md  Vagrantfile  codemeta.json  example_config.ini  local-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: fair-data-registry.yaml  fair-windows.yaml
custom_user/: admin.py  managers.py  models.py
data_management/: admin.py  api_views.py  apps.py  models.py  object_storage.py  prov.py  resources.py  rocrate.py  settings.py  tables.py  urls.py  validators.py  version.py  views.py
data_management/management/commands/: _example_data.py  add_example_data.py  get_token.py  set_site_info.py
data_management/rest/: metadata.py  pagination.py  renderers.py  serializers.py  views.py
data_management/templatetags/: auth_tags.py
data_management/tests/: init_prov_db.py  initdb.py  test_api.py  test_commands.py  test_custom_urls.py  test_views.py
docs/: api_guide.md  authentication.md  data_upload.md  index.md  local_registry.md  prov_report.md
drams/: asgi.py  base_settings.py  dev-settings.py  local-settings.py  settings.py  test-remote-settings.py  test-settings.py  urls.py  vagrant-settings.py  wsgi.py
drams/settings/: base.py  dev.py  local.py  remote.py  test.py  vagrant.py
scripts/: rebuild-local.sh  rebuild.sh  reset_fair_registry  start_fair_registry  start_fair_registry_vagrant  start_fair_registry_windows.bat  start_fair_registry_windows.ps1  stop_fair_registry_windows.bat  stop_fair_registry_windows.ps1
static/: localregistry.bat  localregistry.ps1  localregistry.sh  remoteregistry.bat  remoteregistry.ps1  remoteregistry.sh
templates/: base.html
templates/data_management/: externalobject_table.html
templates/rest_framework/: api.html
tools/: check_components.py  setup.py
