[tool.poetry]
authors = ["PLACEHOLDER <NAME.SURNAME@MYCOMPANY.COM>"]
description = ""
name = "data-registry"
version = "v1.0-rc7"

[tool.poetry.dependencies]
Django = "3.1.13"
Markdown = "3.2.2"
coverage = "5.5"
django-allauth = "0.42.0"
django-bootstrap-breadcrumbs = "0.9.2"
django-crispy-forms = "1.9.2"
django-dynamic-model-validation = "0.1.13"
django-extensions = "2.2.9"
django-filter = "2.3.0"
django-grappelli = "2.14.2"
djangorestframework = "3.11.2"
future = "0.17.1"
gunicorn = "20.0.4"
mysql-connector-python = "8.0.20"
networkx = "2.4"
prov = "1.5.3"
pydot = "1.4.1"
python = ">=3.7.1, <3.11"
semver = "2.10.2"
whitenoise = "5.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
