[tool.poetry]
authors = [
  "Richard Blackwell <rtblackwell@users.noreply.github.com>",
  "Alys Brett <alysbrett@users.noreply.github.com>",
  "James Cook <jwscook@users.noreply.github.com>",
  "Nathan Cummings <nathan-cummings-ukaea@users.noreply.github.com>",
  "Ryan Field <ryan.field@glasgow.ac.uk>",
  "Alejandra Gonzalez-Beltran <agbeltran@users.noreply.github.com>",
  "Jonathan Hollocombe <jholloc@users.noreply.github.com>",
  "Andrew Lahiff <andrewl-uk@users.noreply.github.com>",
  "Richard Reeve <Richard.Reeve@glasgow.ac.uk>",
  "Antony Wilson <antony-wilson@users.noreply.github.com>",
  "Kristian Zarębski <kristian.zarebski@ukaea.uk>",
  "Robert D Turner <r.d.turner@shef.ac.uk>",
  ]
description = "Codebase for the FAIR data-registry"
name = "data-registry"
version = "v1.0.7"

[tool.poetry.dependencies]
Django = "3.1.13"
Markdown = "3.2.2"
coverage = "5.5"
django-allauth = "0.42.0"
django-bootstrap-breadcrumbs = "0.9.2"
django-crispy-forms = "1.9.2"
django-dynamic-model-validation = "0.1.13"
django-extensions = "2.2.9"
django-filter = "2.3.0"
django-grappelli = "2.14.2"
djangorestframework = "3.11.2"
future = "0.17.1"
gunicorn = "20.0.4"
mysql-connector-python = "8.0.20"
networkx = "2.4"
prov = "1.5.3"
pydot = "1.4.1"
python = ">=3.7.1, <3.11"
semver = "2.10.2"
whitenoise = "5.2.0"
rocrate = "0.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
